# belaf-test-repo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.js  package.json
.github/workflows/: ci.yml
apps/api/: CHANGELOG.md  Cargo.toml
apps/api/crates/core/: Cargo.toml
apps/api/crates/core/src/: lib.rs
apps/api/src/: main.rs
apps/cli/: CHANGELOG.md  Cargo.toml
apps/cli/crates/core/: Cargo.toml
apps/cli/crates/core/src/: lib.rs
apps/cli/src/: main.rs
apps/web/: CHANGELOG.md  Cargo.toml
apps/web/crates/core/: Cargo.toml
apps/web/crates/core/src/: lib.rs
apps/web/src/: main.rs
belaf/releases/: release-20251219-160925-823a1538.json  release-20251219-163416-fdf9ba34.json  release-20251219-164736-4e97914c.json  release-20251219-172759-c0dd9280.json  release-20251219-180725-894d355b.json  release-20251219-181012-8cf736b8.json  release-20251219-190934-15ac7fb0.json  release-20251219-194215-0b568634.json  release-20251220-212251-44494588.json  release-20251220-213016-69beef02.json  release-20251220-221011-cf0ec0b4.json  release-20251220-221752-0b1852d9.json  release-20251220-221805-b708a304.json  release-20251220-221859-1c5ff5e2.json  release-20251221-151440-db90972f.json  release-20251221-152114-b6a11ee2.json  release-20251221-153458-eb4c6774.json  release-20251221-161353-2621dfb1.json  release-20251221-222430-4ffb8d9c.json  release-20251221-233703-80f770eb.json  release-20251221-234256-0a984ae0.json  release-20251222-063639-a49bdc0c.json  release-20251222-064237-bf886443.json  release-20251222-070255-bdff8083.json  release-20251222-090316-e777ba20.json  release-20251222-090448-be08db3c.json  release-20251222-125706-405d0061.json  release-20251222-133850-f9a2131d.json  release-20251223-002450-ccc561af.json  release-20251223-003248-fa726ded.json  release-20251223-003611-c1b6efd1.json  release-20251223-003642-97439bb7.json  release-20251223-003905-c3c202fa.json  release-20251223-060016-ebbab290.json  release-20251230-114449-216348d4.json  release-20251231-090216-657e4c52.json  release-20251231-090429-6ee3bb19.json  release-20251231-094154-d6c827bb.json  release-20251231-094535-d56f0c10.json
src/: array.js  greet.js  math.js  object.js  string.js  utils.js
