[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
utils = { path = "../../packages/utils" }
config = { path = "../../packages/config" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
