[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/bin",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["nyxb <contact@nyxb.zip>"]

[workspace.dependencies]
# Internal
web-core = { path = "crates/core" }

# External
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
